--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -1,32 +1,38 @@
-.btn{
-    background-color: transparent;
-    border: none;
-    color: white;
-    cursor: pointer;
-    font-size: 12px;
-    padding: 7px 10px 7px 10px;
+.btn {
+  background-color: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+  font-size: 12px;
+  padding: 7px 10px 7px 10px;
 
-    transition: color .3s ease;
+  transition: color 0.3s ease;
 
-    &:focus{
-        outline: none;
-    }
-    &:hover{
-        color: darken($color: white, $amount: 10);
-    }
+  &:focus {
+    outline: none;
+  }
+  &:hover {
+    color: darken($color: white, $amount: 10);
+  }
 }
-.btn-block{
-    width: 100%;
+.btn-block {
+  width: 100%;
 }
+.btn-danger {
+  background-color: red;
+  transition: background-color 0.3s ease;
+  &:hover {
+    background-color: darken($color: red, $amount: 20);
+  }
+}
+.btn-primary {
+  background-color: $primary;
+  border-radius: 2px;
 
-.btn-primary{
-    background-color: $primary;
-    border-radius: 2px;
-
-    &:disabled{
-        background-color: lighten($color: $primary, $amount: 15);
-    }
-    &:hover{
-        background-color: darken($color: $primary, $amount: 15);
-    }
+  &:disabled {
+    background-color: lighten($color: $primary, $amount: 15);
+  }
+  &:hover {
+    background-color: darken($color: $primary, $amount: 15);
+  }
 }
